ex01 - finir le display, fairel'ajout dans un rep plein

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,4 +1,4 @@
-NAME    =    phone
+NAME    = phone
 OS		= $(shell uname)
 
 # directories
@@ -7,8 +7,8 @@ INCDIR        =    ./includes
 OBJDIR        =    ./obj
 
 # src / obj files
-SRC        =    main.cpp\
-            .cpp\
+SRC        = main.cpp\
+            Contact.class.cpp\
             PhoneBook.class.cpp\
 
 
@@ -19,24 +19,24 @@ CC        = c++
 CFLAGS    = -Wall -Wextra -Werror -g3 #-fsanitize=address
 
 
-all: obj $(NAME)
+all:	obj $(NAME)
 
-obj:
-    mkdir -p $(OBJDIR)
-
-
-$(OBJDIR)/%.o:    $(SRCDIR)/%.cpp
-    $(CC) $(CFLAGS) -I $(INCDIR) -o $@ -c $<
+obj:	
+		mkdir -p $(OBJDIR)
 
 
-$(NAME): $(OBJ)
-    $(CC) $(CFLAGS) $(OBJ) -lm -o $(NAME)
+$(OBJDIR)/%.o:	$(SRCDIR)/%.cpp
+				$(CC) $(CFLAGS) -I $(INCDIR) -o $@ -c $<
+
+
+$(NAME):		$(OBJ)
+				$(CC) $(CFLAGS) $(OBJ) -lm -o $(NAME)
 
 clean:
-    rm -rf $(OBJDIR)
+		rm -rf $(OBJDIR)
 
-fclean: clean
-    rm -rf $(NAME)
+fclean:	clean
+		rm -rf $(NAME)
 
-re: fclean
-    make all
+re:		fclean
+		make all
