--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -16,7 +16,7 @@ OBJ        = $(addprefix $(OBJDIR)/,$(SRC:.cpp=.o))
 
 # compiler
 CC        = c++
-CFLAGS    = -Wall -Wextra -Werror -g3 #-fsanitize=address
+CFLAGS    = -Wall -Wextra -Werror -std=c++98 -g3 #-fsanitize=address
 
 
 all:	obj $(NAME)
